--- a/src/App.css
+++ b/src/App.css
@@ -31,11 +31,22 @@ body{
   
 } 
 
-/* .nav-item-underline span{
-  display: inline-block;
-  transform: scale(1.111);
-} */
+.active{
+  position: relative;
+  transform:translate(5px, -3px) scale(1.111);
+    margin-right: 3px;
+}
+.active::after{
+  content: "";
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  width: 100%;
+  height: 3px;
+  background: linear-gradient(90deg, #711C91,#0ABDC6, #133E7C) ; 
 
+   
+}
 
 /* ************************************************background gradient Start************************************ */
 .hero{
