--- a/src/App.css
+++ b/src/App.css
@@ -53,9 +53,6 @@ body{
   z-index: 1;
   height: 94vh;
   position: relative;
-  /* background: radial-gradient(25% 45% at 72% 53%, #0ABDC6 1%,  #091833 97%)
-  */
-
 }
 .glow-1{
   width: 38%;
@@ -98,7 +95,6 @@ position: absolute;
 top: 23%;
 left: 57%;
 z-index: 3;
-/* transform: translate(-50%, -50%); */
 width: 26%;
 aspect-ratio: 1/1;
 background:  linear-gradient(90deg,#711C91, #0ABDC6, #133E7C) ;
@@ -110,12 +106,7 @@ padding: 2px;
   width: 100%;
   height: 100%;
   background-color: #C4C4C4;
-  /* height:26% ; */
-  /* border: 3px solid transparent; */
   border-radius: 50%;
-  /* border-image: conic-gradient( #711C91, #133E7C,#0ABDC6) 1; */
-  /* border-width: 2px; */
-
 }
 .circle-2-border{
   position: absolute;
@@ -129,12 +120,10 @@ border-radius: 50%;
 padding: 3px;
 }
 .circle-2{
-  /* border: linear-gradient(45deg, #711C91, #133E7C,#0ABDC6); */
   z-index: -2;
   width: 100%;
   height: 100%;
   background: #091833;
-  /* border-width: 3px; */
   border-radius: 50%;
 }
 .circle-3-border{
@@ -153,7 +142,6 @@ padding: 3px;
   width: 100%;
   height: 100%;
   background: linear-gradient(135deg,#0ABDC6, #133E7C,  #711C91);
-  /* border-width: 3px; */
   border-radius: 50%;
 }
 .circle-4-border{
@@ -169,10 +157,9 @@ padding: 3px;
 }
 .circle-4{
   z-index: -2;
-    width: 100%;
+  width: 100%;
   height: 100%;
   background: #091833;
-    /* border-width: 3px; */
   border-radius: 50%;
 }
 
@@ -322,8 +309,6 @@ padding: 3px;
 .Additional-skill-gradient{
   position: relative;
   font-family: Hind;
-  
-
 }
 .Additional-skill-gradient::before{
   content: "";
@@ -334,4 +319,107 @@ padding: 3px;
   aspect-ratio: 1/1;
   border-radius: 50% ;
   background: linear-gradient(90deg, #711C91,  #133E7C, #0ABDC6);
+}
+
+/* ************************************************Media-Queries************************************** */
+
+/* Phones (extra small devices, <576px) */
+@media (max-width: 575.98px) {
+
+  html{
+    font-size: 12px;
+  }
+  .hero{
+  height: 75vh;
+}
+.glow-1{
+    width: 35%;
+    top: 17%;
+    left: 52%;
+}
+.glow-2{
+    width: 35%;
+    top: 27%;
+    left: 62%;  
+}
+.circle-1-border{
+top: 23%;
+left: 57%;
+min-width: 105px;
+width: 26%;
+}
+.circle-2-border{
+top: 31%;
+left: 40%;
+min-width: 120px;
+width: 30%;
+}
+.circle-3-border{
+  top: 34%;
+  left: 72%;
+  z-index: 1;
+  min-width: 70px;
+  width: 16%;
+}
+.circle-4-border{
+  top: 25%;
+  left: 72%;
+  min-width: 70px;
+  width: 16%;
+}
+.hero-text{
+  position: relative;
+  z-index:4;
+  justify-content: center !important;
+  padding-bottom: 180px;
+}
+
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+/* Small devices (landscape phones, ≥576px) */
+@media (min-width: 576px) and (max-width: 767.98px) {
+  
+}
+
+/* Medium devices (tablets, ≥768px) */
+@media (min-width: 768px) and (max-width: 991.98px) {
+  
+}
+
+/* Large devices (desktops, ≥992px) */
+@media (min-width: 992px) and (max-width: 1199.98px) {
+
+}
+
+/* Extra large devices (≥1200px) */
+@media (min-width: 1200px) and (max-width: 1399.98px) {
+
+}
+
+/* Extra extra large devices (≥1400px) */
+@media (min-width: 1400px) {
+  
 }
