--- a/src/App.css
+++ b/src/App.css
@@ -285,6 +285,7 @@ padding: 3px;
   padding: 15px;
   background-color: #091833;
   width: 100%;
+  height: 100%;
 }
 .card-img-height{
   max-height: 212px;
@@ -343,6 +344,44 @@ padding: 3px;
   aspect-ratio: 1/1;
   border-radius: 50% ;
   background: linear-gradient(90deg, #711C91,  #133E7C, #0ABDC6);
+}
+
+/* ***************************************************Contact Me******************************************* */
+.form-border{
+  /* height: 75vh; */
+  width: 50vw;
+  background:linear-gradient(90deg,#711C91, #0ABDC6, #133E7C);
+  padding: 2px;
+  border-radius: 20px ;
+}
+.form-border:hover{
+  box-shadow: 0px 0px 25px -14px #0ABDC6;
+}
+.form{
+  height: 100%;
+  width: 100%;
+  background-color: #091833;
+  border-radius: 20px;
+  
+}
+
+.form-input{
+  color: #fff;
+  background-color: #091833;
+  border: none;
+  border-radius: 10px;
+}
+.form-input-border{
+  background: linear-gradient(90deg,#711C91, #0ABDC6, #133E7C);
+  padding: 2px;
+  border-radius: 10px;
+}
+.form-input:hover{
+ box-shadow: 2px 5px 23px -10px #0ABDC6;
+}
+.form-input:focus{
+  background-color: #091833;
+ box-shadow: 2px 5px 23px -10px #0ABDC6;
 }
 
 /* ************************************************Media-Queries************************************** */
@@ -407,15 +446,21 @@ width: 1.5rem;
 min-width: 1rem;
 
 }
+.form-border{
+  width: 100vw;
+  background: none;
+}
 }
 
 /* Medium devices (tablets, ≥768px) */
 @media (min-width: 768px) and (max-width: 991.98px) {
   .glow-1{
       /* display: none; */
+      left : 70%
     }
     .glow-2{
-    /* display: none; */
+      left : 75%
+      /* display: none; */
   }
   .circle-1-border{
     left: 75% ;
